--- a/main.css
+++ b/main.css
@@ -173,3 +173,13 @@ imgpink {
     margin-left: auto;
     margin-right: auto;
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones thank cyber */
+    .card {
+      flex-direction: column;
+      width: 100%;
+      padding: 0;
+    }
+  }
+  
